# whatsapp-ai-bot

./: .env.example  .gitignore  LICENSE  README.md  index.js  package-lock.json  package.json  start.bat
public/: knowledge.html
python/: conversation_manager.py  gemini_client.py  knowledge_base.py  main.py  pyproject.toml  requirements.txt
